--- a/bin/AndroidManifest.xml
+++ b/bin/AndroidManifest.xml
@@ -1,13 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.snupick_"
+    package="com.wafflestudio.snujoop"
     android:versionCode="1"
     android:versionName="1.0" >
 
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
-	<permission android:name="com.example.snupick_.permission.C2D_MESSAGE" android:protectionLevel="signature" />
-	<uses-permission android:name="com.example.snupick_.permission.C2D_MESSAGE" />
+	<permission android:name="com.wafflestudio.snujoop.permission.C2D_MESSAGE" android:protectionLevel="signature" />
+	<uses-permission android:name="com.wafflestudio.snujoop.permission.C2D_MESSAGE" />
 	<uses-permission android:name="com.google.android.c2dm.permission.RECEIVE" />
 	<uses-permission android:name="android.permission.GET_ACCOUNTS" />
 	<uses-permission android:name="android.permission.WAKE_LOCK" />
